--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>GitHub Connection-Testing</h1>
+
+    <p>This is a test page for connecting to GitHub.</p>
 </body>
 </html>
